--- a/src/index.css
+++ b/src/index.css
@@ -19,3 +19,10 @@
 .ltr {
     direction: ltr;
 }
+
+#root {
+    max-width: 1280px;
+    margin: 0 auto;
+    padding: 2rem;
+    text-align: center;
+}
